refactor: servicios de recolección de TMDB y recolección asíncrona (#53)
* docs: add TMDB service refactoring design with ActorItem entity

- Comprehensive design for performance optimization (75-80% improvement)
- Introduces ActorItemEntity to capture character names and billing order
- Leverages TMDB's append_to_response to reduce API calls by 50%
- Implements batch caching to eliminate N+1 queries
- Rate-limited parallel fetching respects TMDB 40 req/s limit
- Detailed implementation phases with performance estimates
- Roadmap, testing strategy, and migration notes included

* Introduce ActorItem join entity; update ItemEntity

Add a new ActorItemEntity JPA join entity to represent actor-item relationships with extra metadata (characterName and billingOrder). Replace the previous ManyToMany actors mapping in ItemEntity with a OneToMany actorItems relationship (mappedBy item) using CascadeType.ALL and orphanRemoval=true, and initialize the set with a HashSet. This change allows storing per-credit details from TMDB and will require DB schema migration and updates to ActorEntity or data access code that previously used the old Set<ActorEntity> association.

* Add TMDB fetcher, DTOs and rate-limited tasks

Introduce a Guava dependency and a new TmdbDataFetcher service that performs parallel, rate-limited TMDB requests using RateLimiter and the existing async executor. Add DTOs (TmdbMovieDetailsDto, TmdbTvShowDetailsDto) to represent details+credits returned via append_to_response, and extend TmdbClient with getMovieDetailsWithCredits and getTvShowDetailsWithCredits. Adjust AsyncConfiguration to use fixed pool sizes, a larger queue and CallerRunsPolicy for rejected tasks. Update application.properties to switch default language to en-US and replace the fixed request-delay with a configurable tmdb.api.rate-limit (default 35 req/s) to safely stay below TMDB's 40 req/s limit. These changes reduce API call overhead by combining detail+credits calls and improve throughput 